--- a/Movie_Store/Movie_Store.vcxproj
+++ b/Movie_Store/Movie_Store.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="MovieInventory.h" />
     <ClInclude Include="MovieList.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Store.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +178,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Store.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
